Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
         <span class="pl-c1">print</span>(<span class="pl-s"><span class="pl-pds">'</span><span class="pl-c1">%d</span> list time: <span class="pl-c1">%10.7f</span><span class="pl-pds">'</span></span> <span class="pl-k">%</span> (i, list_del_time))
         <span class="pl-c1">print</span>(<span class="pl-s"><span class="pl-pds">'</span><span class="pl-c1">%d</span> dcit time: <span class="pl-c1">%10.7f</span><span class="pl-pds">'</span></span> <span class="pl-k">%</span> (i, dict_del_time))</pre></div>
 
+<ul>
+<li>Devise an experiment to verify that get item and set item are 𝑂(1) for dictionaries</li>
+</ul>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/sunshine-sjd/Problem-Solving-with-Algorithms-and-DataStructures">Problem-solving-with-algorithms-and-datastructures</a> is maintained by <a href="https://github.com/sunshine-sjd">sunshine-sjd</a>.</span>
 
